Fix magnifier background color on Safari

--- a/packages/portal-style/src/modules/_search.scss
+++ b/packages/portal-style/src/modules/_search.scss
@@ -33,6 +33,7 @@
       font-size: 26px;
       padding: 0;
       color: $brand-primary;
+      background-color: white;
     }
   }
 }
